@@ -61,8 +61,16 @@ else {
 			$_SESSION[$guid]["gibbonThemeID"]="001" ;
 			$_SESSION[$guid]["gibbonThemeName"]="Default" ;
 			try {
-				$sqlTheme="SELECT * FROM gibbonTheme WHERE active='Y'" ;
-				$resultTheme=$connection2->query($sqlTheme);  
+				if ($_SESSION[$guid]["gibbonThemeIDPersonal"]!=NULL) {
+					$dataTheme=array("gibbonThemeIDPersonal"=>$_SESSION[$guid]["gibbonThemeIDPersonal"]); 
+					$sqlTheme="SELECT * FROM gibbonTheme WHERE gibbonThemeID=:gibbonThemeIDPersonal" ;
+				}
+				else {
+					$dataTheme=array(); 
+					$sqlTheme="SELECT * FROM gibbonTheme WHERE active='Y'" ;
+				}
+				$resultTheme=$connection2->prepare($sqlTheme);
+				$resultTheme->execute($dataTheme);
 				if (count($resultTheme)==1) {
 					$rowTheme=$resultTheme->fetch() ;
 					$themeCSS="<link rel='stylesheet' type='text/css' href='./themes/" . $rowTheme["name"] . "/css/main.css' />" ;
